--- a/src/icons/Logo2.astro
+++ b/src/icons/Logo2.astro
@@ -1,8 +1,8 @@
-<svg xmlns="http://www.w3.org/2000/svg"  width="194.000000pt" height="181.000000pt" viewBox="0 0 194.000000 181.000000" preserveAspectRatio="xMidYMid meet">
+<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg"  width="194.000000pt" height="181.000000pt" viewBox="0 0 194.000000 181.000000" preserveAspectRatio="xMidYMid meet">
     <defs>
         <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
-            <stop offset="0%" style="stop-color:rgb(87, 97, 178);stop-opacity:1" />
-            <stop offset="100%" style="stop-color:rgb(31, 197, 168);stop-opacity:1" />
+            <stop offset="0%" style="stop-color:rgb(135, 181, 233);stop-opacity:1" />
+            <stop offset="100%" style="stop-color:rgb(85,186,205);stop-opacity:1" />
         </linearGradient>
     </defs>
     <g transform="translate(0.000000,181.000000) scale(0.100000,-0.100000)" stroke="none">
