Images size optimization. Cursor effect arrangement. Sections Start, Education and Learning arrangement Header color details.

--- a/src/components/EducationTimeline.astro
+++ b/src/components/EducationTimeline.astro
@@ -12,7 +12,7 @@ const LEARNING = [
 
     {
         date: 'Finalizado en 2019',
-        img: 'farixa.webp',
+        img: 'Farixa.webp',
         location: 'Orense',
         place: 'CIFP A Farixa',
         title: 'FP Superior en Sistemas de Telecomunicación e Informáticos'
