--- a/src/components/ExperienceTimeline.astro
+++ b/src/components/ExperienceTimeline.astro
@@ -4,38 +4,42 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
     {
         date: 'Julio - agosto, 2023',
-        img: '/centum.jpg',
+        img: '/Centum.webp',
         job_description: 'Desarrollador de software',
         location: 'Vigo, Pontevedra',
         place: 'Centum research & technology',
-        title: 'Prácticas del Grado en Ingeniería de Tecnologías de Telecomunicación'
+        title: 'Prácticas del Grado en Ingeniería de Tecnologías de Telecomunicación',
+        web: 'https://www.centum-rt.com/'
     },
 
     {
         date: 'Febrero - marzo, 2023',
-        img: '/uvigo_foro.jpg',
-        job_description: 'Atención y asistencia al personal de los estands y conferencias. Apoyo y asistencia al personal encargado de la organización del foro.',
+        img: '/UVigoForo.webp',
+        job_description: 'Atención y asistencia al personal de los estands y conferencias. Apoyo y ayuda a la organización del foro.',
         location: 'Vigo, Pontevedra',
         place: 'Universidad de Vigo',
-        title: 'Colaborador del Foro Tecnológico de empleo de la Universidad de Vigo'
+        title: 'Colaborador del Foro Tecnológico de Empleo de la Universidad de Vigo',
+        web: 'https://minaseenerxia.uvigo.es/es/estudiantes/asociaciones-estudiantiles/foro-tecnoloxico-de-emprego/'
     },
 
     {
         date: 'Mayo - junio, 2018',
-        img: '/rla.jpg',
+        img: '/RLA.webp',
         job_description: 'Mantenimiento de sistemas informáticos y eléctricos',
-        location: 'San Ciprián de Viñas, Ourense',
+        location: 'San Ciprián de Viñas, Orense',
         place: 'Rodríguez López Auto',
-        title: 'Prácticas como técnico en Sistemas Informáticos'
+        title: 'Prácticas como técnico en Sistemas Informáticos',
+        web: 'https://www.rodriguezlopez.com/'
     },
     
     {
         date: 'Marzo - abril, 2018',
-        img: '/elecnor.jpeg',
+        img: '/Elecnor.webp',
         job_description: 'Instalación y mantenimiento de sistemas de telecomunicación en viviendas y edificios',
-        location: 'Ourense, Ourense',
+        location: 'Orense, Orense',
         place: 'Elecnor',
-        title: 'Prácticas como técnico en Sistemas de Telecomunicación'
+        title: 'Prácticas como técnico en Sistemas de Telecomunicación',
+        web: 'https://www.elecnor.com/'
     },
 ]
 ---
