--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ const NAVs = [
     },
     {
         title: 'Experiencia',
-        link: '/#experiencia',
+        link: '#experiencia',
         icon: ExperienceIcon
     },
     {
@@ -37,7 +37,7 @@ const NAVs = [
 ]
 ---
 
-<header class=" flex items-center justify-between fixed top-0 z-10 right-0 left-0 py-2 border-b-2 border-[#030744]/90 backdrop-blur-sm w-[1240px] mx-auto">
+<header class=" flex items-center justify-between fixed top-0 z-10 right-0 left-0 py-2 border-b-2 border-sky-400/90 backdrop-blur-sm w-[1240px] mx-auto">
     
     <LogoIcon class="size-16" /> 
 
