--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import CardTheme from '@/components/CardTheme.astro'
 					link='https://www.linkedin.com/in/omar-d-l'
 				/>
 
-				<CardTheme />
+				<!--CardTheme /-->
 
 				<CardClock />
 
@@ -44,7 +44,7 @@ import CardTheme from '@/components/CardTheme.astro'
 				<CardLink />
 
 				<CardLocation 
-					img='/vigo.webp'
+					img='/Vigo.webp'
 				/>
 
 				<CardProfilePhoto 
