--- a/src/components/CardBadge.astro
+++ b/src/components/CardBadge.astro
@@ -13,8 +13,8 @@ const { link } = Astro.props;
     <a
       href={link}
       target="_blank"
-      rel="noopener"
-      class="flex items-center transition md:justify-center md:hover:scale-105"
+      rel="noopener noreferer"
+      class="flex items-center transition md:justify-center"
     >
         <Badge> Disponible para trabajar </Badge> 
     </a>
