--- a/src/components/CardClock.astro
+++ b/src/components/CardClock.astro
@@ -1,7 +1,7 @@
 ---
 import '@fontsource-variable/kode-mono';
 ---
-<div class="grid-shadow relative overflow-hidden row-start-3 col-start-3 flex flex-col flex-wrap justify-center px-6 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 text-[#38bdf8] text-pretty rounded-3xl">
+<div class="grid-shadow relative overflow-hidden row-start-3 col-start-3 flex flex-col flex-wrap justify-center px-6 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 text-sky-400 text-pretty rounded-3xl">
     <div id="spotClock1" class="absolute size-72 rounded-full bg-sky-900 opacity-50 blur-md ml-20 mb-64" />
     <div id="spotClock2" class="absolute size-12 rounded-full bg-blue-800 opacity-70 blur-md ml-24 mt-16" />
     <p id="time" class="text-[32px] font-bold" />
