--- a/src/components/CardTitle.astro
+++ b/src/components/CardTitle.astro
@@ -16,7 +16,7 @@ const { name } = Astro.props;
     <div id="spotTitle2" class="absolute size-12 rounded-full bg-sky-700 opacity-50 blur-md mt-6 ml-[660px]" />
     <div id="spotTitle3" class="absolute size-24 rounded-full bg-cyan-600 opacity-30 blur-md mt-1 ml-32" />
     <h1 class="text-white mx-6 text-2xl md:text-4xl lg:text-5xl font-bold"> 
-        Hola, soy <span class="text-sky-400 bg-gradient-to-r from-[#38bdf8] from-0% via-[#fff] via-5% to-[#38bdf8] to-10% text-transparent bg-clip-text animate-[shine_3s_linear_infinite]"> {name} </span>
+        Hola, soy <span class="text-sky-400 bg-gradient-to-r from-sky-400 from-0% via-[#fff] via-5% to-sky-400 to-10% text-transparent bg-clip-text animate-[shine_3s_linear_infinite]"> {name} </span>
     </h1>	
 </div>
 
