--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,3 +1,3 @@
-<a class={"grid-shadow opacity-70 bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex justify-center items-center gap-x-2 py-1 px-2 md:py-2 md:px-4 text-xs md:text-base  transition hover:scale-110 hover:text-[#38bdf8] hover:border-[#38bdf8]"} {... Astro.props} target="_blank" rel="noopener noreferrer">
+<a class={"grid-shadow opacity-80 bg-[linear-gradient(110deg,#07090D,45%,#4D4B4B,55%,#07090D)] border border-white/30 animate-[backgroundShine_3s_linear_infinite] bg-[length:250%_100%] rounded-full flex justify-center items-center gap-x-2 py-1 px-2 md:py-2 md:px-4 text-xs md:text-base transition hover:scale-110 hover:text-sky-400 hover:border-sky-400"} {... Astro.props} target="_blank" rel="noopener noreferrer">
     <slot />
 </a>
