--- a/src/components/EducationItem.astro
+++ b/src/components/EducationItem.astro
@@ -1,6 +1,8 @@
 ---
 import BuildingItem from '../icons/Building.astro'
 import CalendarItem from '../icons/Calendar.astro'
+import InfoItem from '../icons/Info.astro'
+import MapItem from '../icons/Map.astro'
 
 interface Props {
     date: string
@@ -34,12 +36,22 @@ const {
         </h3>
     </div>
 
-    <div class="grid-shadow flex items-end justify-center col-start-2 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`}>
-        <h5 class="text-lg flex flex-row items-center justify-center p-1 w-full gap-2 font-semibold text-sky-200  backdrop-blur-sm rounded-br-3xl rounded-bl-3xl" >
-            <BuildingItem class="size-6" /> 
-            <span>
+    <div class="grid-shadow group overflow-hidden relative flex items-end col-start-2 border-[#212121] bg-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`}>
+        <span class="absolute flex items-center justify-center size-6 ml-3 mb-1 rounded-full bg-[#080c1c] animate-[tilt_1s_ease-in-out_infinite_alternate]">
+            <InfoItem class="size-5 text-sky-300"/>
+        </span>
+        <footer class="flex flew-row justify-between px-3 w-full absolute bg-[#080c1c] rounded-b-3xl text-sky-300 transition duration-500 ease-in-out translate-y-full group-hover:translate-y-0">
+            <span class="text-pretty flex flex-row items-center justify-center p-1 gap-2 font-semibold" >
+                <BuildingItem class="size-6" /> 
                 {place}
             </span>
-        </h5>
+
+            <span class="text-pretty flex flex-row items-center justify-center p-1 gap-2 font-semibold" >
+                <MapItem class="size-6" /> 
+                {location}
+            </span>
+        </footer>    
     </div>
 </div>
+
+
