--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,6 +1,8 @@
 ---
 import BuildingItem from '../icons/Building.astro'
 import CalendarItem from '../icons/Calendar.astro'
+import InfoItem from '../icons/InfoClickable.astro'
+import MapItem from '../icons/Map.astro'
 
 interface Props {
     date: string
@@ -9,6 +11,7 @@ interface Props {
     location: string
     place: string
     title: string
+    web: string
 }
 
 const { 
@@ -18,6 +21,7 @@ const {
     location,
     place,
     title,  
+    web,
 } = Astro.props
 ---
 
@@ -31,29 +35,29 @@ const {
 
 
 <div class="grid-experience mt-4 grid-rows-1 grid-cols-3 gap-6">
-    <div class="grid-shadow flex flex-col gap-y-6 items-center col-start-1 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
-        <h3 class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty">
+    <div class="grid-shadow group col-start-1 flex flex-col justify-center gap-y-6 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
+        <span class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {title}
-        </h3>
-        <h5 class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty">
+        </span>
+        <span class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {job_description}
-        </h5>
+        </span>
     </div>
 
-    <div class="grid-shadow flex items-end justify-center col-start-2 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`}>
-        <h5 class="text-lg flex flex-row items-center justify-center p-1 w-full gap-2 font-semibold text-sky-200  backdrop-blur-sm rounded-br-3xl rounded-bl-3xl" >
-            <BuildingItem class="size-6" /> 
-            <span>
+    <a href={web} class="grid-shadow group overflow-hidden relative flex items-end col-start-2 border-[#212121] bg-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
+        <span class="absolute flex items-center justify-center size-6 ml-3 mb-1 rounded-full bg-[#080c1c] animate-[tilt_1s_ease-in-out_infinite_alternate]">
+            <InfoItem class="size-5 text-sky-300"/>
+        </span>
+        <footer class="flex flew-row justify-between px-3 w-full absolute bg-[#080c1c] rounded-b-3xl text-sky-300 transition duration-500 ease-in-out translate-y-full group-hover:translate-y-0">
+            <span class="flex flex-row items-center justify-center p-1 gap-2 font-semibold" >
+                <BuildingItem class="size-6" /> 
                 {place}
             </span>
-        </h5>
-    </div>
 
-    <div class="grid-shadow flex items-start justify-center col-start-3 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl" style='background-image: url(/world.jpg); background-size:cover;'>
-        <h5 class="text-lg flex flex-row gap-x-2 font-semibold text-sky-700 mt-1 mx-4">
-            <div class="pin"></div>
-            <div class="pulse"></div>
-            {location}
-        </h5>
-    </div>
+            <span class="flex flex-row items-center justify-center p-1 gap-2 font-semibold" >
+                <MapItem class="size-6" /> 
+                {location}
+            </span>
+        </footer>  
+    </a>
 </div>
