--- a/src/components/CardLink.astro
+++ b/src/components/CardLink.astro
@@ -2,8 +2,8 @@
 import LinkIcon from '../icons/Link.astro'
 ---
 
-<div class="grid-shadow relative overflow-hidden row-start-1 text-lg col-start-4 flex justify-center items-center border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
-    <div id="spotLink" class="absolute size-36 rounded-full bg-indigo-800 opacity-50 blur-md mt-44 ml-12" />
+<div class="shadow-grid hover:shadow-grid-hover relative overflow-hidden row-start-1 text-lg col-start-4 flex justify-center items-center border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
+    <div id="spotLink" class="absolute duration-1000 size-36 rounded-full bg-indigo-800 opacity-50 blur-md mt-44 ml-12" />
     <a href="/CV" class="group relative w-fit block after:block after:content-[''] after:absolute after:h-[2px] after:bg-white after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center after:rounded-full">
         <span class="flex flex-row gap-x-2 transform:none">
             Ver mi CV
