--- a/src/components/EducationItem.astro
+++ b/src/components/EducationItem.astro
@@ -25,18 +25,18 @@ const {
     <CalendarItem class="size-4"/>
 </span>
 
-<time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+<time class="mb-1 text-md font-normal leading-none text-gray-400 dark:text-gray-500">
     {date}
 </time>
 
-<div class="grid-education mt-4 grid-rows-1 grid-cols-3 gap-6">
-    <div class="grid-shadow group flex items-center col-start-1 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
-        <h3 class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
+<div class="grid-education mt-4 grid-rows-1 grid-cols-2 gap-6">
+    <div class="shadow-grid hover:shadow-grid-hover group flex items-center col-start-1 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
+        <h3 class="text-lg font-semibold text-sky-400 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {title}
         </h3>
     </div>
 
-    <div class="grid-shadow group overflow-hidden relative flex items-end col-start-2 border-[#212121] bg-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`}>
+    <div class="shadow-grid hover:shadow-grid-hover group overflow-hidden relative flex items-end col-start-2 border-[#212121] bg-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size:cover;`}>
         <span class="absolute flex items-center justify-center size-6 ml-3 mb-1 rounded-full bg-[#080c1c] animate-[tilt_1s_ease-in-out_infinite_alternate]">
             <InfoItem class="size-5 text-sky-300"/>
         </span>
@@ -52,6 +52,4 @@ const {
             </span>
         </footer>    
     </div>
-</div>
-
-
+</div>                                                              
