--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -29,22 +29,22 @@ const {
     <CalendarItem class="size-4"/>
 </span>
 
-<time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+<time class="mb-1 text-md font-normal leading-none text-gray-400 dark:text-gray-500">
     {date}
 </time>
 
 
 <div class="grid-experience mt-4 grid-rows-1 grid-cols-3 gap-6">
-    <div class="grid-shadow group col-start-1 flex flex-col justify-center gap-y-6 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
-        <span class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
+    <div class="shadow-grid hover:shadow-grid-hover group col-start-1 flex flex-col justify-center gap-y-6 border-[#212121] bg-[#212121] backdrop-blur-sm bg-opacity-40 rounded-3xl">
+        <span class="text-lg font-semibold text-sky-300 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {title}
         </span>
-        <span class="text-lg font-semibold text-sky-700 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
+        <span class="text-lg font-semibold text-sky-600 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {job_description}
         </span>
     </div>
 
-    <a href={web} class="grid-shadow group overflow-hidden relative flex items-end col-start-2 border-[#212121] bg-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
+    <a href={web} class="shadow-grid hover:shadow-grid-hover group overflow-hidden relative flex items-end col-start-2 border-[#212121] bg-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
         <span class="absolute flex items-center justify-center size-6 ml-3 mb-1 rounded-full bg-[#080c1c] animate-[tilt_1s_ease-in-out_infinite_alternate]">
             <InfoItem class="size-5 text-sky-300"/>
         </span>
