--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import CardContact from '../components/CardContact.astro'
 import CardProfilePhoto from '../components/CardProfilePhoto.astro'
 import CardLink from '../components/CardLink.astro'
 import CardSubtitle from '../components/CardSubtitle.astro'
+import CardTheme from '../components/CardTheme.astro'
 import CardTitle from '../components/CardTitle.astro'
 import Contact from '../components/Contact.astro'
 import Experiencie from '../components/ExperienceTimeline.astro'
@@ -20,8 +21,6 @@ import ProjectsIcon from '../icons/Proyects.astro'
 import CardLocation from '@/components/CardLocation.astro'
 import CardBadge from '@/components/CardBadge.astro'
 import CardClock from '../components/CardClock.astro'
-import MouseIcon from '../icons/Mouse.astro'
-import CardTheme from '@/components/CardTheme.astro'
 ---
 
 <Layout 
@@ -30,12 +29,12 @@ import CardTheme from '@/components/CardTheme.astro'
 >
 	<main>
 		<section id="inicio" class="w-full mx-auto lg:w-[1240px] pt-28">
-			<div class="animatePop grid-container grid-rows-4 grid-cols-2 gap-6">
+			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid-container grid-rows-4 grid-cols-2 gap-6">
 				<CardBadge 
 					link='https://www.linkedin.com/in/omar-d-l'
 				/>
 
-				<!--CardTheme /-->
+				<CardTheme />
 
 				<CardClock />
 
@@ -86,6 +85,7 @@ import CardTheme from '@/components/CardTheme.astro'
 				<ExperienceIcon class="size-8"/>
 				Experiencia
 			</h2>
+			
 			<Experiencie />
 		</section>
 
@@ -110,13 +110,8 @@ import CardTheme from '@/components/CardTheme.astro'
 </Layout>
 
 <style>
-	.animatePop {
-  animation-name: animate-pop;
-  animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
-  animation-duration: 0.5s;
-}
-
-@keyframes animate-pop {
+/** animate-pop duration-500 ease-[cubic-bezier(0.26, 0.53, 0.74, 1.48)] */
+@keyframes pop {
   0% {
     opacity: 0;
     transform: scale(0.5, 0.5);
